--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -87,8 +87,7 @@ services:
       - ./airflow/dags:/opt/airflow/dags
       - ./airflow/logs:/opt/airflow/logs
       - ./airflow/plugins:/opt/airflow/plugins
-      - /var/run/docker.sock:/var/run/docker.sock
-    user: "0:0"
+      - //var/run/docker.sock:/var/run/docker.sock
     ports:
       - "8080:8080"
     command: webserver
@@ -108,8 +107,7 @@ services:
       - ./airflow/dags:/opt/airflow/dags
       - ./airflow/logs:/opt/airflow/logs
       - ./airflow/plugins:/opt/airflow/plugins
-      - /var/run/docker.sock:/var/run/docker.sock
-    user: "0:0"
+      - //var/run/docker.sock:/var/run/docker.sock
     command: scheduler
 
 volumes:
